@@ -9,5 +9,6 @@
         public string Exchange { get; set; }
         public string Username { get; set; }
         public string Password { get; set; }
+        public bool IsEnabled { get; set; }
     }
 }
